--- a/project_sequence/wizards/res_config_settings_view.xml
+++ b/project_sequence/wizards/res_config_settings_view.xml
@@ -7,16 +7,10 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="project.res_config_settings_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//div[@id='tasks_management']" position="inside">
-                <div
-                    id="project_display_name_pattern"
-                    class="col-12 col-lg-6 o_setting_box"
-                >
-                    <div class="o_setting_right_pane" name="pad_project_right_pane">
-                        <label for="project_display_name_pattern" class="d-block" />
-                        <field name="project_display_name_pattern" />
-                    </div>
-                </div>
+            <xpath expr="//block[@id='tasks_management']" position="inside">
+                <setting id="project_display_name_pattern">
+                    <field name="project_display_name_pattern" />
+                </setting>
             </xpath>
         </field>
     </record>
