[IMP] project_sequence: pre-commit auto fixes

--- a/project_sequence/views/project_project.xml
+++ b/project_sequence/views/project_project.xml
@@ -49,7 +49,9 @@
                 expr="//span[t[@t-esc='record.display_name.value']]"
                 position="after"
             >
-                <span><t t-esc="record.display_name.value" /></span>
+                <span>
+                    <t t-esc="record.display_name.value" />
+                </span>
             </xpath>
         </field>
     </record>
