--- a/project_sequence/views/project_project.xml
+++ b/project_sequence/views/project_project.xml
@@ -40,13 +40,13 @@
                 <field name="name" />
             </xpath>
             <xpath
-                expr="//span[t[@t-esc='record.display_name.value']]"
+                expr="//span[@t-att-title='record.display_name.value']"
                 position="attributes"
             >
                 <attribute name="invisible">1</attribute>
             </xpath>
             <xpath
-                expr="//span[t[@t-esc='record.display_name.value']]"
+                expr="//span[@t-att-title='record.display_name.value']"
                 position="after"
             >
                 <span>
